IntelliJ Project zum Import
1a. Configure  -> Project Structure
1b. Configure -> Plugins -> Install Netbeans PLugin - > Scala suchen
2. New ... JDK auswählen
3. Import Project -> Verzeichnis wählen -> SBT auswählen

--- a/musclepedia/conf/application.conf
+++ b/musclepedia/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-application.secret="B@1X3ZFa[WiF4V3B?0W<nEug=</ggMmfS9d>IZR5canln[b5:A>wdMCYHsL^Sx0f"
+application.secret="xp?pu>HeujatO0/xm[AeOpqeHRUm7Chd9C:N_2y7dPlLqegYAEgiQQFQPBEDEu]]"
 
 # The application languages
 # ~~~~~
