--- a/musclepedia/conf/application.conf
+++ b/musclepedia/conf/application.conf
@@ -54,7 +54,7 @@ db.default.url="jdbc:sqlite:app/db/database"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
